<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2020 Deepesh Patel
  ~
  ~    This file is part of Data Number Tools. Number Tools is free software: you can redistribute it and/or modify
  ~    it under the terms of the GNU Lesser General Public License as published by
  ~    the Free Software Foundation, either version 3 of the License or any
  ~    later version.
  ~
  ~    This program is distributed in the hope that it will be useful,
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~    GNU Lesser General Public License for more details.
  ~
  ~    You should have received a copy of the GNU Lesser General Public License
  ~    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.deepeshpatel</groupId>
    <artifactId>jnumbertools</artifactId>
    <version>3.0.0</version>

    <packaging>jar</packaging>

    <name>JNumberTools:Combinatorics Library</name>
    <url>https://github.com/deepeshpatel/jnumbertools</url>
    <description>
        JNumberTools is the combinatorics and number-theory library which provides
        simple APIs to generate combinations, permutations, subsets, cartesian-product and number-system
    </description>

    <licenses>
        <license>
            <name>GNU LESSER GENERAL PUBLIC LICENSE v3</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
    </properties>

    <developers>
        <developer>
            <name>Deepesh Patel</name>
            <email>patel.deepesh@gmail.com</email>
            <organizationUrl>https://github.com/deepeshpatel</organizationUrl>
            <roles>
                <role>Maintainer</role>
                <role>Developer</role>
            </roles>
            <timezone>+5:30</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/deepeshpatel/jnumbertools.git</connection>
        <developerConnection>scm:git:git@github.com:deepeshpatel/jnumbertools.git</developerConnection>
        <url>https://github.com/deepeshpatel/jnumbertools</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/deepeshpatel/jnumbertools/issues</url>
    </issueManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.25.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>3.25.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>disable-java8-doclint</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <doclint>none</doclint>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin with UTF-8 encoding -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M2</version>
                <configuration>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven Javadoc Plugin with UTF-8 encoding -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <excludePackageNames>
                        io.github.deepeshpatel.jnumbertools.examples,
                        io.github.deepeshpatel.jnumbertools.generator.permutation.unique,
                        io.github.deepeshpatel.jnumbertools.generator.permutation.repetitive,
                        io.github.deepeshpatel.jnumbertools.generator.permutation.multiset,
                        io.github.deepeshpatel.jnumbertools.generator.permutation.k,
                        io.github.deepeshpatel.jnumbertools.generator.permutation.iterator
                    </excludePackageNames>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
